// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IIFE (1) 1`] = `
"<script lang="ts">
  (function () {})();
</script>
"
`;

exports[`IIFE (2) 1`] = `
"<script lang="ts">
  (() => {})();
</script>
"
`;

exports[`anonymous function expression 1`] = `
"<script lang="ts">
  (function () {});
</script>
"
`;

exports[`arrow function expression (1) 1`] = `
"<script lang="ts">
  const sum = (a, b) => {
    return a + b;
  };
</script>
"
`;

exports[`arrow function expression (2) 1`] = `
"<script lang="ts">
  const foo = () => {};
</script>
"
`;

exports[`arrow function that returns object literal (1) 1`] = `
"<script lang="ts">
  const foo = () => ({});
</script>
"
`;

exports[`arrow function that returns object literal (2) 1`] = `
"<script lang="ts">
  const foo = () => ({ foo: "bar" });
</script>
"
`;

exports[`arrow function that returns object literal (3) 1`] = `
"<script lang="ts">
  const foo = () => ({
    foo: "bar",
    baz,
  });
</script>
"
`;

exports[`function declaration (1) 1`] = `
"<script lang="ts">
  function sum(a, b) {
    return a + b;
  }
</script>
"
`;

exports[`function declaration (2) 1`] = `
"<script lang="ts">
  function foo() {}
</script>
"
`;

exports[`function expression (1) 1`] = `
"<script lang="ts">
  const sum = function (a, b) {
    return a + b;
  };
</script>
"
`;

exports[`function expression (2) 1`] = `
"<script lang="ts">
  const foo = function () {};
</script>
"
`;

exports[`function that returns object literal (1) 1`] = `
"<script lang="ts">
  function foo() {
    return {};
  }
</script>
"
`;

exports[`function that returns object literal (2) 1`] = `
"<script lang="ts">
  function foo() {
    return { foo: "bar" };
  }
</script>
"
`;

exports[`function that returns object literal (3) 1`] = `
"<script lang="ts">
  function foo() {
    return {
      foo: "bar",
      baz,
    };
  }
</script>
"
`;

exports[`object literal parameter (1) 1`] = `
"<script lang="ts">
  foo({
    bar,
    baz: "baz",
  });
</script>
"
`;

exports[`object literal parameter (2) 1`] = `
"<script lang="ts">
  foo(bar, {
    baz: "baz",
  });
</script>
"
`;

exports[`object literal parameter (3) 1`] = `
"<script lang="ts">
  foo(
    { bar: "bar" },
    {
      baz: "baz",
    },
  );
</script>
"
`;

exports[`promise chain 1`] = `
"<script lang="ts">
  myPromise
    .then((value) => {
      console.log(value);
    })
    .catch((err) => {
      console.error(err);
    });
</script>
"
`;
